--- a/src/app/events/event-detail/event-detail.html
+++ b/src/app/events/event-detail/event-detail.html
@@ -1,9 +1,9 @@
 <ion-view class="cool-gray-background" hide-tabs='true' view-title="Meet Details">
     <ion-nav-buttons side="right">
-        <button class="button button-small button-clear" ng-click="vm.goToInvite()">
+        <button class="button button-small button-clear white-text" ng-click="vm.goToInvite()">
         <i class="icon ion-person-add"></i>
         </button>
-        <button class="button button-small button-clear" ng-click="vm.goToEdit()">
+        <button class="button button-small button-clear white-text" ng-click="vm.goToEdit()">
              <i class="icon ion-edit"></i>
         </button>
     </ion-nav-buttons>
