--- a/src/app/events/events-create/events-create.html
+++ b/src/app/events/events-create/events-create.html
@@ -1,6 +1,6 @@
 <ion-view class="cool-gray-background" hide-tabs='true' view-title="Create Meet">
     <ion-nav-buttons side="right">
-        <button class="button" ng-click="vm.create(vm.EventsService.newEvent)">
+        <button class="button button-clear white-text" ng-click="vm.create(vm.EventsService.newEvent)">
             Create
         </button>
     </ion-nav-buttons>
