--- a/src/app/events/events.html
+++ b/src/app/events/events.html
@@ -1,7 +1,6 @@
 <ion-view class="cool-gray-background" view-title="Meets">
     <ion-nav-buttons side="right">
-        <button class="button" ng-click="vm.transition()">
-            Create Meet
+        <button class="button icon button-clear white-text ion-plus-round" ng-click="vm.transition()">
         </button>
     </ion-nav-buttons>
     <ion-content>
