--- a/src/app/events/event-detail/events-detail-invited/events-detail-invited.html
+++ b/src/app/events/event-detail/events-detail-invited/events-detail-invited.html
@@ -3,7 +3,7 @@
     <ion-list>
      <ion-item class="item-remove-animate item-button-right" ng-repeat="invitedUser in vm.EventsService.currentEvent.invited_people" ng-show="invitedUser.status == vm.invitedStatus" type="item-text-wrap">
           <h2>{{invitedUser.uid}}</h2>
-          <button class="button button-clear icon ion-key"  ng-class="{'button-energized': invitedUser.privilege == 'admin','button-calm': invitedUser.privilege == 'subadmin' }" ng-click="vm.EventsService.changeMemberPrivilege(invitedUser)">
+          <button class="button button-clear icon ion-key"  ng-class="{'button-energized': invitedUser.privilege == 'admin','button-calm': invitedUser.privilege == 'subadmin' }" ng-hide="vm.EventsService.currentEvent.my_privilege == null && invitedUser.privilege == null" ng-click="vm.EventsService.changeMemberPrivilege(invitedUser)">
           </button>
       </ion-item>
     </ion-list>
