--- a/src/app/events/event-detail/event-detail.html
+++ b/src/app/events/event-detail/event-detail.html
@@ -1,11 +1,7 @@
 <ion-view class="cool-gray-background" hide-tabs='true' view-title="Meet Details">
     <ion-nav-buttons side="right">
-        <button class="button button-small button-clear white-text" ng-click="vm.goToInvite()">
-        <i class="icon ion-person-add"></i>
-        </button>
-        <button class="button button-small button-clear white-text" ng-click="vm.goToEdit()">
-             <i class="icon ion-edit"></i>
-        </button>
+        <button class="button button-small button-clear white-text icon ion-person-add" ng-click="vm.goToInvite()" ng-hide="vm.EventsService.currentEvent.my_privilege == null"></button>
+        <button class="button button-small button-clear white-text icon ion-edit" ng-click="vm.goToEdit()" ng-if="vm.EventsService.currentEvent.my_privilege == 'admin'"></button>
     </ion-nav-buttons>
     <ion-content>
     <div class="item item-divider">
@@ -31,10 +27,10 @@
         </div>
         <div class="list card">
             <ion-item class="item-icon-left">
-                <i class="icon ion-email"></i> {{vm.EventsService.currentEvent.status}}
+                <i class="icon ion-unlocked" ng-class="{'ion-locked': vm.EventsService.currentEvent.status == 'full','ion-android-cancel':  vm.EventsService.currentEvent.status == 'canceled' }"></i> {{vm.EventsService.currentEvent.status}}
             </ion-item>
             <ion-item class="item-icon-left">
-                <i class="icon ion-key"></i> {{vm.EventsService.currentEvent.admin}}
+                <i class="icon ion-key energized"></i> {{vm.EventsService.currentEvent.admin}}
             </ion-item>
             <ion-item>
                 Last Update </i> <span am-time-ago="vm.EventsService.currentEvent.updated_at"></span>
@@ -43,8 +39,8 @@
     </ion-content>
     <ion-footer-bar align-title="center">
         <div class="button-bar">
-            <a class="button button-clear" ng-click="vm.EventsService.assist()">Assist</a>
-            <a class="button button-clear button-assertive" ng-click="vm.EventsService.notAssist()">Can't assist</a>
+            <a class="button button-clear" ng-class="{'button-balanced' : vm.EventsService.currentEvent.my_status == 'assisting'}" ng-click="vm.EventsService.assist()">Assist</a>
+            <a class="button button-clear" ng-class="{'button-assertive' : vm.EventsService.currentEvent.my_status == 'not_assisting'}" ng-click="vm.EventsService.notAssist()">Can't assist</a>
         </div>
     </ion-footer-bar>
 </ion-view>
