--- a/src/app/events/events.html
+++ b/src/app/events/events.html
@@ -13,7 +13,7 @@
 
             <div class="row">
               <div class="col col-10 item-icon-left">
-                  <i class="icon ion-unlocked"></i>
+                   <i class="icon ion-unlocked" ng-class="{'ion-locked': event.status == 'full','ion-android-cancel':  event.status == 'canceled' }"></i>
               </div>
 
               <div class="col col-ID">
