--- a/src/app/contacts/contacts-add/contacts-add.html
+++ b/src/app/contacts/contacts-add/contacts-add.html
@@ -6,7 +6,7 @@
                 <input type="search" placeholder="Search" ng-model="vm.searchTerm" ng-change="vm.search()">
             </label>     
         </div>
-        <div class="item item-divider">
+        <div class="item item-divider" ng-show="vm.ContactsService.searchResults">
             Search Results
         </div>
         <ion-list>
@@ -14,33 +14,6 @@
                 <h2>{{contact.uid}}</h2>
                 <button class="button button-clear button-balanced icon ion-person-add" ng-click="vm.addContact(contact)">
                 </button>
-            </ion-item>
-        </ion-list>
-        <div class="item item-divider">
-            Requests Recieved
-        </div>
-        <ion-list ng-hide="vm.searchTerm == ''">
-            <ion-item class="item-remove-animate item-icon-right" ng-repeat="contact in vm.ContactsService.all | filter:{uid: vm.searchTerm}" type="item-text-wrap" ng-show="{{!contact.accepted && contact.type == 'inverse'}}">
-                <h2>{{contact.uid}}</h2>
-            </ion-item>
-        </ion-list>
-        <div class="item item-divider">
-            Requests Sent
-        </div>
-        <ion-list ng-hide="vm.searchTerm == ''">
-            <ion-item class="item-remove-animate item-icon-right" ng-repeat="contact in vm.ContactsService.all | filter:{uid: vm.searchTerm}" type="item-text-wrap" ng-show="{{!contact.accepted && contact.type == 'normal'}}">
-                <h2>{{contact.uid}}</h2>
-            </ion-item>
-        </ion-list>
-        <div class="item item-divider">
-            Contacts
-        </div>
-        <ion-list ng-hide="vm.searchTerm == ''">
-            <ion-item class="item-remove-animate item-icon-right" ng-repeat="contact in vm.ContactsService.all | filter:{uid: vm.searchTerm}" type="item-text-wrap" ng-show="contact.accepted">
-                <h2>{{contact.uid}}</h2>
-                <ion-option-button class="button-assertive" ng-click="vm.remove(event)">
-                    Delete
-                </ion-option-button>
             </ion-item>
         </ion-list>
     </ion-content>
