--- a/src/app/contacts/contacts.html
+++ b/src/app/contacts/contacts.html
@@ -4,33 +4,33 @@
         </button>
     </ion-nav-buttons>
     <ion-content>
-    <div class="item item-divider">
+    <div class="item item-divider" ng-show="requestsRecieved.length">
             Requests Recieved
         </div>
         <ion-list>
-            <ion-item class="item-remove-animate item-button-right" ng-repeat="contact in vm.ContactsService.all" type="item-text-wrap" ng-show="{{!contact.accepted && contact.type == 'inverse'}}">
+            <ion-item class="item-remove-animate item-button-right" ng-repeat="contact in requestsRecieved =  (vm.ContactsService.all | requestsRecieved)" type="item-text-wrap">
                 <h2>{{contact.uid}}</h2>
                 <button class="button button-positive button-clear" ng-click="vm.requestRecievedActionSheet(contact)">
                   Action
                 </button>
             </ion-item>
         </ion-list>
-        <div class="item item-divider">
+        <div class="item item-divider" ng-show="requestsSent.length">
             Requests Sent
         </div>
         <ion-list>
-            <ion-item class="item-remove-animate" ng-repeat="contact in vm.ContactsService.all" type="item-text-wrap" ng-show="{{!contact.accepted && contact.type == 'normal'}}">
+            <ion-item class="item-remove-animate" ng-repeat="contact in requestsSent = (vm.ContactsService.all | requestsSent)" type="item-text-wrap">
                 <h2>{{contact.uid}}</h2>
                 <ion-option-button class="button-assertive" ng-click="vm.removeContact(contact)">
                     Cancel
                 </ion-option-button>
             </ion-item>
         </ion-list>
-        <div class="item item-divider">
+        <div class="item item-divider" ng-show="friends.length">
             Contacts
         </div>
         <ion-list>
-            <ion-item class="item-remove-animate item-icon-right" ng-repeat="contact in vm.ContactsService.all" type="item-text-wrap" ng-show="contact.accepted">
+            <ion-item class="item-remove-animate item-icon-right" ng-repeat="contact in friends = (vm.ContactsService.all | friends)" type="item-text-wrap" ng-show="contact.accepted">
                 <h2>{{contact.uid}}</h2>
                 <ion-option-button class="button-assertive" ng-click="vm.removeContact(contact)">
                     Delete
