Add username as sign in credential

--- a/src/app/authentication/authentication.html
+++ b/src/app/authentication/authentication.html
@@ -2,7 +2,7 @@
     <ion-content>
         <div class="list">
             <label class="item item-input">
-                <input type="email" name="email" ng-model="vm.loginForm.email" placeholder="Email">
+                <input ng-model="vm.loginForm.username" placeholder="Username">
             </label>
             <label class="item item-input">
                 <input ng-model="vm.loginForm.password" type="password" name="password" placeholder="Password">
