--- a/src/app/layout/tabs.html
+++ b/src/app/layout/tabs.html
@@ -11,7 +11,7 @@ navigation history that also transitions its views in and out.
 	</ion-tab>
 
 	<!-- Contacts Tab -->
-	<ion-tab title="Contacts" icon-off="ion-ios-chatboxes-outline" icon-on="ion-ios-chatboxes" ui-sref="tab.contacts.index">
+	<ion-tab title="Contacts" icon-off="ion-person-stalker" icon-on="ion-person-stalker" ui-sref="tab.contacts.index">
 		<ion-nav-view name="tab-contacts"></ion-nav-view>
 	</ion-tab>
 
