--- a/src/app/events/events-create/events-create-invite/events-create-invite.html
+++ b/src/app/events/events-create/events-create-invite/events-create-invite.html
@@ -12,7 +12,7 @@
           <div class="item item-divider">
               Contacts
           </div>
-          <ion-item class="item-button-right" ng-repeat="contact in vm.ContactsService.all" ng-hide="contact.hide">    
+          <ion-item class="item-button-right" ng-repeat="contact in friends = (vm.ContactsService.all | friends)" ng-hide="contact.hide">    
             {{contact.uid}}
             <button class="button button-assertive button-clear icon ion-ios-plus-outline" ng-click="vm.inviteContact(contact)">
             </button>
