--- a/src/app/events/events-create/events-create.html
+++ b/src/app/events/events-create/events-create.html
@@ -4,7 +4,7 @@
     <span ng-if="!(vm.values.processing)">Create Meet<span>
   </ion-nav-title>
     <ion-nav-buttons side="right">
-        <button class="button button-clear white-text" ng-click="vm.create(vm.EventsService.newEvent)" ng-disbled="(vm.values.processing)">
+        <button class="button button-clear white-text" ng-click="vm.create(vm.EventsService.newEvent)" ng-disabled="(vm.values.processing)">
             Create
         </button>
     </ion-nav-buttons>
