--- a/src/app/account/account.html
+++ b/src/app/account/account.html
@@ -2,7 +2,7 @@
 	<ion-content>
 		<ion-list>
       <ion-item class="icon ion-person">
-        {{vm.Session.current_user.uid}}
+        {{vm.Session.current_user.id}}
       </ion-item>
       <button class="button button-full button-positive" ng-click="vm.signOutUser()">Sign Out</button>
 		</ion-list>
