--- a/src/app/events/event-detail/events-detail-edit/events-detail-edit.html
+++ b/src/app/events/event-detail/events-detail-edit/events-detail-edit.html
@@ -1,7 +1,11 @@
-<ion-view class="cool-gray-background" hide-tabs='true' view-title="Edit Meet">
+<ion-view class="cool-gray-background" hide-tabs='true'>
+    <ion-nav-title>
+        <ion-spinner icon="lines" class="spinner-balanced" ng-if="(vm.values.processing)"></ion-spinner>
+        <span ng-if="!(vm.values.processing)">Edit Meet<span>
+  </ion-nav-title>
     <ion-nav-buttons side="right">
-        <button class="button" ng-click="vm.EventsService.update(vm.editingEvent)">
-            Done
+        <button class="button button-clear white-text" ng-click="vm.update(vm.editingEvent)" ng-disabled="(vm.values.processing)">
+            Update
         </button>
     </ion-nav-buttons>
     <ion-content>
