--- a/src/app/contacts/contacts.html
+++ b/src/app/contacts/contacts.html
@@ -27,7 +27,7 @@
         <ion-list>
             <ion-item class="item-remove-animate" ng-repeat="contact in requestsSent = (vm.ContactsService.all | requestsSent)" type="item-text-wrap">
                 <h2>{{contact.name}}</h2>
-                <p>{{contact.id}}</p>
+                <p>{{contact.username}}</p>
                 <ion-option-button class="button-assertive" ng-click="vm.removeContact(contact)" ng-if="!(vm.isContained(vm.processingButtons, contact))">
                     Cancel
                 </ion-option-button>
