--- a/src/app/registration/registration.html
+++ b/src/app/registration/registration.html
@@ -2,10 +2,10 @@
     <ion-content>
         <div class="list">
             <label class="item item-input">
-                <input type="name" ng-model="vm.registrationForm.name" placeholder="Name">
+                <input type="text" ng-model="vm.registrationForm.name" placeholder="Name">
             </label>
             <label class="item item-input">
-                <input ng-model="vm.registrationForm.username" placeholder="Username">
+                <input type="text" ng-model="vm.registrationForm.username" placeholder="Username">
             </label>
             <label class="item item-input">
                 <input type="email" ng-model="vm.registrationForm.email" placeholder="Email">
@@ -17,7 +17,6 @@
             <label class="item item-input">
                 <input type="password" name="password_confirmation" ng-model="vm.registrationForm.password_confirmation" placeholder="Password confirmation"></textarea>
             </label>
-            <div vc-recaptcha key="'6LfmqBcTAAAAAM09TQ2Xy_40vI5fVpH7Hx8ULzpO'"></div>
         </div>
 
         <button class="button button-full button-positive" ng-click="vm.registerUser()">Register</button>
