--- a/src/app/events/events.html
+++ b/src/app/events/events.html
@@ -10,7 +10,7 @@
     </ion-nav-buttons>
     <ion-content>
         <ion-list>
-            <ion-item class="item-remove-animate item-icon-right" ng-repeat="event in vm.EventsService.results" type="item-text-wrap">
+            <ion-item class="item-remove-animate item-icon-right" ng-repeat="event in vm.EventsService.results | orderBy: 'updated_at':true" type="item-text-wrap">
 
             <div class="row">
               <div class="col col-10 item-icon-left">
